fixed spacing

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
 
 .card {
   background-color: hsl(var(--clr-white));
-  padding: 1em;
+  padding: 1.1em;
 
   max-width: 19em;
   border-radius: 1em;
@@ -46,12 +46,12 @@ body {
 }
 
 .card .content-wrapper {
-  max-width: 82%;
+  max-width: 95%;
   margin: auto;
 }
 
 .card__img {
-  margin-bottom: 1em;
+  margin-bottom: 1.4em;
 
   display: block;
   width: 100%;
@@ -60,7 +60,7 @@ body {
 }
 
 .card__title {
-  font-size: 1.5em;
+  font-size: 1.3em;
   color: hsl(var(--clr-darkblue));
 }
 
